[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Real-world email triage environment for the OpenEnv RL benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "reinforcement-learning", "email", "nlp", "agent"]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "openai>=1.55.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.17",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml"]